src/app/components/solrSearchInput/solrSearchInput.directive.scss
.solr-search {
  display: inline-block;
  .form-group {
    margin: 0;
    .form-inline {
      @include flex-and-align-center;
      .form-control {
        height: 41px;
        @include desktop {
          width: 300px;
        }
      }
    }
  }

  .dropdown-group {
    display: inline-block;
    vertical-align: top;
    margin: 2px;
    .domain-button {
      background-color: $white;
      color: $marine-blue;
      padding: 6px 12px;
      width: 200px;
      height: 41px;
      text-align: left;
      @include flex-and-align-center;
      justify-content: space-between;
      border: 1px solid #ccc;
      border-radius: 4px;
      &:focus {
        border: 1px solid #66afe9;
        box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
      }
      a, a:active, a:hover, a:visited {
        color: $white;
        font-size: 14px;
        letter-spacing: 0.9px;
        text-decoration: none;
      }
      .dropdown-text {
        width: 150px;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
        float: left;
      }
      .dropdown-caret {
        transform: rotate(90deg);
        float: right;
      }
    }
  }

  .dropdown-menu {
    li {
      a {
        color: $marine-blue;
        &:hover, &:focus {
          background-color: lighten($warm-grey, 30%);
          text-decoration: none;
        }
      }
    }
  }

  label {
    color: $marine-blue;
    font-size: 18px;
    font-weight: 600;
    padding-right: 10px;
    letter-spacing: 2.6px;
    margin: 0;
  }

  .input-group {
    display: flex;
    align-items: center;

    .search-group {
      display: flex;
      margin: 2px;
      .third-child {
        #solr-search-input {
          color: $marine-blue;
          border: none;
          + ul {
            border-radius: 4px;
            width: 361px;
            .active > a,
            .active > a:hover,
            .active > a:focus {
              background-color: lighten($warm-grey, 30%);
            }
            a {
              color: $marine-blue;
              padding: 3px 10px;
              overflow: hidden;
              text-overflow: ellipsis;
            }
            li:first-child,
            li:nth-child(2),
            li:nth-child(3) {
              a {
                color: $ocean-blue;
                strong {
                  font-weight: normal;
                  color: $marine-blue;
                }
              }
            }
            li:nth-child(3) {
              border-bottom: 1px solid #d1d2d4;
              padding-bottom: 11px;
              a {
                padding-left: 0;
                strong {
                  margin: 0 0 0 10px;
                }
              }
            }
          }
        }
      }

      .first-child {
        #solr-search-input {
          color: $marine-blue;
          + ul {
            border-radius: 4px;
            width: 361px;
            .active > a,
            .active > a:hover,
            .active > a:focus {
              background-color: lighten($warm-grey, 30%);
            }
            a {
              color: $marine-blue;
              padding: 3px 10px;
              overflow: hidden;
              text-overflow: ellipsis;
            }
            li:first-child {
              a {
                color: $ocean-blue;
                strong {
                  font-weight: normal;
                  color: $marine-blue;
                }
              }
            }
            li:first-child {
              border-bottom: 1px solid #d1d2d4;
              padding-bottom: 11px;
              a {
                padding-left: 0;
                strong {
                  margin: 0 0 0 10px;
                }
              }
            }
          }
        }
      }
    }
  }

  .search-btn {
    background-color: $medium-blue;
    color: $white;
    padding: 7.5px 8.5px 7.5px 8px;
    border: 1px solid $medium-blue;
    img {
      width: 22.5px;
      height: 23.85px;
    }
    &:hover {
      background-color: $dark-ocean;
    }
  }

}

